--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src/design-tokens.css"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist",
+    "build": "tsup src/components/ui/index.ts --dts --format esm,cjs --out-dir dist --tsconfig tsconfig.app.json && npm run build:tokens && cp src/design-tokens.css dist/ && echo '@import \"./design-tokens.css\";' > dist/index.css",
+    "build:tokens": "style-dictionary build --config style-dictionary.config.js",
+    "build:storybook": "storybook build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build",
-    "build:tokens": "style-dictionary build --config style-dictionary.config.js"
+    "storybook:tokens": "npm run build:tokens && npm run storybook",
+    "tokens:watch": "style-dictionary build --config style-dictionary.config.js --watch",
+    "clean": "rm -rf dist storybook-static",
+    "prepublishOnly": "npm run clean && npm run build"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
@@ -57,8 +62,8 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.509.0",
     "next-themes": "^0.4.6",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
@@ -92,6 +97,7 @@
     "playwright": "^1.52.0",
     "storybook": "^8.6.12",
     "style-dictionary": "^5.0.0",
+    "tsup": "^8.5.0",
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
