--- a/package.json
+++ b/package.json
@@ -97,7 +97,10 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.3",
+    "concurrently": "^8.2.2",
+    "http-server": "^14.1.1",
+    "wait-on": "^7.2.0"
   },
   "eslintConfig": {
     "extends": [
