--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -56,28 +56,42 @@ jobs:
           
           # Check if we can access the URL without hitting login page
           echo "Testing URL accessibility with bypass headers..."
-          echo "Full response with redirects:"
-          curl -v -L \
+          echo "First trying without following redirects:"
+          curl -v \
             -H "x-vercel-protection-bypass: ${{ secrets.VERCEL_PROTECTION_BYPASS }}" \
             -H "x-vercel-set-bypass-cookie: true" \
             -H "Cookie: _vercel_jwt=${{ env.PREVIEW_TOKEN }}" \
             ${{ env.BASE_URL }}
             
-          RESPONSE_CODE=$(curl -L -s -o /dev/null -w "%{http_code}" \
+          echo "\nNow trying with limited redirects:"
+          curl -v -L --max-redirs 5 \
             -H "x-vercel-protection-bypass: ${{ secrets.VERCEL_PROTECTION_BYPASS }}" \
             -H "x-vercel-set-bypass-cookie: true" \
             -H "Cookie: _vercel_jwt=${{ env.PREVIEW_TOKEN }}" \
+            -H "Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8" \
+            -H "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36" \
+            ${{ env.BASE_URL }}
+            
+          RESPONSE_CODE=$(curl --max-redirs 5 -L -s -o /dev/null -w "%{http_code}" \
+            -H "x-vercel-protection-bypass: ${{ secrets.VERCEL_PROTECTION_BYPASS }}" \
+            -H "x-vercel-set-bypass-cookie: true" \
+            -H "Cookie: _vercel_jwt=${{ env.PREVIEW_TOKEN }}" \
+            -H "Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8" \
+            -H "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36" \
             ${{ env.BASE_URL }})
           
           if [ "$RESPONSE_CODE" = "200" ]; then
             echo "✅ URL is accessible (HTTP 200)"
           else
-            echo "❌ URL returned HTTP $RESPONSE_CODE - might be hitting login page"
-            echo "Response headers:"
-            curl -s -I -L \
+            echo "❌ URL returned HTTP $RESPONSE_CODE"
+            echo "Final URL and headers:"
+            curl -sIL --max-redirs 5 \
               -H "x-vercel-protection-bypass: ${{ secrets.VERCEL_PROTECTION_BYPASS }}" \
               -H "x-vercel-set-bypass-cookie: true" \
               -H "Cookie: _vercel_jwt=${{ env.PREVIEW_TOKEN }}" \
+              -H "Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8" \
+              -H "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36" \
+              -w "\nFinal URL: %{url_effective}\n" \
               ${{ env.BASE_URL }}
             exit 1
           fi
