--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
+    types: [opened, synchronize, reopened, converted_to_draft, ready_for_review]
     branches: [ main ]
   schedule:
     # Run at midnight PST (8 AM UTC)
@@ -12,6 +12,7 @@ on:
 
 jobs:
   test:
+    if: github.event.pull_request.draft == true || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
 
     steps:
