--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -47,17 +47,34 @@ jobs:
           fi
         continue-on-error: true
 
-      - name: Send Slack notification
+      - name: Notify Slack Workflow
         if: always()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: custom
-          custom_payload: |
-            {
-              "text": "*Storybook Test Results* 📚\n*Repository:* ${{ github.repository }}\n*Status:* ${{ steps.storybook-test.outputs.test_outcome == 'success' && '✅ Passed' || '❌ Failed' }}",
-              "attachments": [{
-                "color": "${{ steps.storybook-test.outputs.test_outcome == 'success' && 'good' || 'danger' }}"
-              }]
-            }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} 
+          SLACK_WORKFLOW_WEBHOOK: ${{ secrets.SLACK_WORKFLOW_WEBHOOK }}
+        run: |
+          # Set STATUS and COLOR based on test outcome
+          STATUS=$(if [[ "${{ steps.storybook-test.outputs.test_outcome }}" == "success" ]]; then echo "Pass"; else echo "Fail"; fi)
+          COLOR=$(if [[ "${{ steps.storybook-test.outputs.test_outcome }}" == "success" ]]; then echo "good"; else echo "danger"; fi)
+          
+          # Send the Slack notification
+          curl -X POST -H "Content-type: application/json" \
+          --data '{
+            "text": "Storybook Test Results ('"${STATUS}"')",
+            "attachments": [
+              {
+                "color": "'"${COLOR}"'",
+                "fields": [
+                  { "title": "Branch", "value": "'"${{ github.ref_name }}"'", "short": true },
+                  { "title": "Commit", "value": "'"${{ github.sha }}"'", "short": true }
+                ],
+                "actions": [
+                  {
+                    "type": "button",
+                    "text": "View GitHub Action",
+                    "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+                    "style": "primary"
+                  }
+                ]
+              }
+            ]
+          }' $SLACK_WORKFLOW_WEBHOOK 
