--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -67,36 +67,30 @@ jobs:
           SLACK_WORKFLOW_WEBHOOK: ${{ secrets.SLACK_WORKFLOW_WEBHOOK }}
         run: |
           # Set STATUS and COLOR based on test outcome
-          if [[ "${{ steps.storybook-test.outputs.test_outcome }}" == "success" ]]; then
-            STATUS="Pass ✅"
-            COLOR="good"
-          else
-            STATUS="Fail ❌"
-            COLOR="danger"
-          fi
-
-          PAYLOAD=$(cat <<EOF
-          {
+          STATUS=$(if [[ "${{ steps.storybook-test.outputs.test_outcome }}" == "success" ]]; then echo "Pass"; else echo "Fail"; fi)
+          COLOR=$(if [[ "${{ steps.storybook-test.outputs.test_outcome }}" == "success" ]]; then echo "good"; else echo "danger"; fi)
+          
+          # Send the Slack notification
+          curl -X POST -H "Content-type: application/json" \
+          --data '{
+            "text": "Storybook Test Results ('"${STATUS}"')",
             "attachments": [
               {
-                "color": "$COLOR",
-                "blocks": [
+                "color": "'"${COLOR}"'",
+                "fields": [
+                  { "title": "Environment", "value": "'"${{ github.event.deployment_status.environment || 'Scheduled Run' }}"'", "short": true },
+                  { "title": "Branch", "value": "'"${{ github.ref_name }}"'", "short": true },
+                  { "title": "Commit", "value": "'"${{ github.sha }}"'", "short": true },
+                  { "title": "URL", "value": "'"${{ env.BASE_URL }}"'", "short": true }
+                ],
+                "actions": [
                   {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "*Storybook Tests Status:* $STATUS\n*Environment:* ${{ github.event.deployment_status.environment || 'Scheduled Run' }}\n*URL:* ${{ env.BASE_URL }}"
-                    }
+                    "type": "button",
+                    "text": "View Storybook",
+                    "url": "'"${{ env.BASE_URL }}"'",
+                    "style": "primary"
                   }
                 ]
               }
             ]
-          }
-EOF
-          )
-
-          # Send notification to Slack
-          curl -X POST \
-            -H 'Content-type: application/json' \
-            -d "$PAYLOAD" \
-            "$SLACK_WORKFLOW_WEBHOOK"
+          }' $SLACK_WORKFLOW_WEBHOOK
